--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -1,5 +1,6 @@
-$--color-primary: #ff6b00 !default;
+$--color-primary: #1aa7cb !default;
 $--color-white: #FFFFFF !default;
+
 $--color-info: #409EFF !default;
 $--color-success: #67C23A !default;
 $--color-warning: #E6A23C !default;
