--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -1,4 +1,4 @@
-$--color-primary: #1aa7cb !default;
+$--color-primary: #1b63a4 !default;
 $--color-white: #FFFFFF !default;
 
 $--color-info: #409EFF !default;
