--- a/lib/style/resize-box.css
+++ b/lib/style/resize-box.css
@@ -11,14 +11,14 @@
     margin: auto; }
   .royce-resize-box .line:hover,
   .royce-resize-box .angle:hover {
-    background: #1aa7cb; }
+    background: #1b63a4; }
   .royce-resize-box .line-t {
     top: -3px;
     left: 0;
     right: 0;
     width: 100%;
     height: 3px;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: row-resize; }
   .royce-resize-box .line-l {
     top: 0;
@@ -26,7 +26,7 @@
     bottom: 0;
     width: 3px;
     height: 100%;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: col-resize; }
   .royce-resize-box .line-r {
     top: 0;
@@ -34,7 +34,7 @@
     bottom: 0;
     width: 3px;
     height: 100%;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: col-resize; }
   .royce-resize-box .line-b {
     left: 0;
@@ -42,7 +42,7 @@
     bottom: -3px;
     width: 100%;
     height: 3px;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: row-resize; }
   .royce-resize-box .angle {
     width: 3px;
@@ -50,20 +50,20 @@
   .royce-resize-box .angle-tl {
     top: -3px;
     left: -3px;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: nwse-resize; }
   .royce-resize-box .angle-tr {
     top: -3px;
     right: -3px;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: nesw-resize; }
   .royce-resize-box .angle-bl {
     bottom: -3px;
     left: -3px;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: nesw-resize; }
   .royce-resize-box .angle-br {
     bottom: -3px;
     right: -3px;
-    background: #edf0f7;
+    background: #F0F0F0;
     cursor: nwse-resize; }
